tests/chapter_12/invalid_types/conflicting_uint_ulong.c
unsigned int foo(void);

unsigned long foo(void) {
    return 0;
}

int main(void) {
    return 0;
}